# avogadro

./: .gitignore  avogadro-1.2.0.files  avogadro-1.2.0.includes  avogadro-1.2.0.pro  avogadro-1.2.0.pro.user.adb131f
libavogadro/examples/thirdPartyExtensions/01-HelloWorld/: helloworlddialog.ui
libavogadro/examples/thirdPartyExtensions/02-DynamicDisplay/: dynamicdisplaydialog.cpp  dynamicdisplaydialog.ui
libavogadro/examples/thirdPartyExtensions/03-ViewPlane/: viewplaneextension.cpp
libavogadro/examples/thirdPartyExtensions/04-RotateSelection/: rotateselectiondialog.cpp  rotateselectionextension.cpp
libavogadro/examples/thirdPartyExtensions/06-TorsionPhiPsi/: CMakeLists.txt  propmodel.cpp  torsiondialog.cpp  torsiondialog.h  torsiondialog.ui  torsionextension.cpp  torsionextension.h
libavogadro/src/: CMakeLists.txt  glwidget.cpp  molecule.cpp  molecule.h  residue.cpp
libavogadro/src/engines/: bsdyengine.cpp
libavogadro/src/extensions/: propextension.cpp  propextension.h  propmodel.cpp  propmodel.h
libavogadro/src/extensions/surfaces/openqube/: CMakeLists.txt
